fix: double scroll bar in contact page

--- a/src/css/_contact.css
+++ b/src/css/_contact.css
@@ -1,3 +1,7 @@
+main {
+  overflow: hidden;
+}
+
 .contact {
   display: grid;
   grid-template-columns: 1fr 1fr;
